syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "./proto;order";

package order;

service Order {
    rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
    rpc GetAllUserOrders(GetAllUserOrdersRequest) returns (GetAllUserOrdersResponse);
    rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);
}

message GetOrderRequest {
    string id = 1;
}

message GetOrderResponse {
    string id = 1;
    string user_id = 2;
    repeated Cartline cartlines = 3;
    OrderStatus status = 4;
    int64 total_price = 5;
    int64 shipping_cost = 6;
    string delivery_address = 7;
    OrderDeliveryType delivery_type = 8;
    google.protobuf.Timestamp created_at = 9;
    google.protobuf.Timestamp updated_at = 10;
}

message Cartline {
    string id = 1;
    string order_id = 2;
    Product product = 3;
    int64 quantity = 4;
}

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    int64 price = 4;
}

enum OrderStatus {
    WAITING_FOR_PAYMENT_STATUS = 0;
    WAITING_FOR_DELIVERY_STATUS = 1;
    DELIVERY_STATUS = 2;
    WAITING_FOR_RECIEVE_STATUS = 3;
    RECIEVED_STATUS = 4;
}

enum OrderDeliveryType {
    SELF_DELIVERY = 0;
    COURIER_DELIVERY = 1;
}

message GetAllUserOrdersRequest {
    string user_id = 1;
}

message GetAllUserOrdersResponse {
    repeated GetOrderResponse orders = 1;
}

message CancelOrderRequest {
    string id = 1;
}

message CancelOrderResponse {}
